background color changes

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -14,5 +14,5 @@ jwt.route.authentication.path=/login
 jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
-
+spring.http.multipart.enabled = true
 server.port=9000
